# Cropopoly3-WhisperTrend

./: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.prod  README.md  entrypoint.sh  flake.nix  main.tf  package-lock.json  package.json  variables.tf
.devcontainer/: .bashrc  .zshrc  devcontainer.json  docker-compose.yml
api/: keysPROtting.postman_collection.json
core/app/: pubspec.yaml
core/app/ios/Runner.xcodeproj/: project.pbxproj
core/collector/: Cargo.toml
core/collector/src/: lib.rs
core/common/: Cargo.toml  build.rs  common.h
core/common/src/: lib.rs
core/models/: pyproject.toml
core/models/src/models/: main.py
core/models/tests/: test_main.py
core/page/: index.html
core/page/assets/: index-Bc37D20v.js  index-BvL8nuQu.css  index-DXXOsBf3.js  index-DexrG37F.js  index-Dh74mrbA.js  index-MnlJb8SU.js  index-_iWQ8rZG.css
core/processor/: Cargo.toml
core/saver/: Cargo.toml
core/scrap/: Cargo.toml  build.rs
core/scrap/.cargo/: config.toml
core/scrap/scrap-core/: Cargo.toml  build.rs
core/scrap/scrap-core/src/: lib.rs
core/scrap/scrap-core/src-go/: exports.go  go.mod  go.sum
core/scrap/scrap-utils/: Cargo.toml
core/scrap/scrap-utils/src/: main.rs
core/scrap/src/: lib.rs
core/scrap/src-go/: exports.go  libscraper.h
core/scrap/src-go/scraper/: core.go
core/scraper/: Cargo.toml  build.rs
core/scraper/src/: lib.rs
core/scraper/src-go/: exports.go  go.mod  go.sum  libscraper.h
core/scraper/src-go/scraper/: core.go  resources.go
core/server/: Cargo.toml  diesel.toml
core/server/app/: Cargo.toml  x_cookies.json
core/server/app/migrations/2025-05-15-005634_user/: down.sql  up.sql
core/server/app/migrations/2025-05-19-083510_recurso/: down.sql  up.sql
core/server/app/migrations/2025-05-22-132153_ventas/: down.sql  up.sql
core/server/app/migrations/2025-05-26-193000_admin/: down.sql  up.sql
core/server/app/src/: cache.rs  common.rs  config.rs  database.rs  main.rs  middlewares.rs  schema.rs
core/server/app/src/controllers/: admin.rs  analysis.rs  auth.rs  auth_link.rs  auth_mfa.rs  chat.rs  email.rs  flow.rs  flow_config.rs  mod.rs  recurso.rs  sale.rs  user.rs  web.rs
core/server/app/src/data/: dataAnalysis.json  new_analysis.md  old_analysis.md  response.md
core/server/app/src/models/: admin.rs  mod.rs  recurso.rs  recursos.rs  resource.rs  sale.rs  user.rs
core/server/app/src/nosql/: client.rs  mod.rs
core/server/app/src/nosql/controllers/: analytics.rs  cache.rs  mod.rs  trends.rs
core/server/app/src/nosql/models/: analysis_result.rs  dashboard_metrics.rs  hashtag_cache.rs  mod.rs  trends_history.rs
core/server/app/src/scraping/: hover.js  instagram.rs  mod.rs  notices.rs  reddit.rs  trends.rs  twitter.rs
core/server/app/src/test/: analysist.rs  analyticst.rs  flowt.rs  formula.rs  instagramt.rs  mod.rs  noticest.rs  redditt.rs  trendst.rs  twittert.rs
core/server/app/src/utils/: analytics.rs  mod.rs
core/server/auth/: Cargo.toml
core/server/auth/src/: lib.rs
core/server/macros/: Cargo.toml
core/server/macros/src/: lib.rs
core/server/migrations/2025-04-24-002725_create_user/: up.sql
core/server/src/: lib.rs  main.rs  middleware.rs  schema.rs
core/server/src/api/: mod.rs
core/server/src/api/routes/: mod.rs
core/server/src/api/routes/auth/user/: signin.rs
core/server/src/api/routes/user/: create_user.rs  get_users.rs  mod.rs
core/server/src/config/: mod.rs
core/server/src/database/: mod.rs
core/server/src/models/: mod.rs
core/server/src/models/jwt/: mod.rs
core/server/src/models/user/: mod.rs
core/server/src/utils/auth/: mod.rs
core/web/: bun.lockb  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
core/web/src/: App.tsx  index.css
core/web/src/assets/: [es-MX] whisper2.mp4.vtt
core/web/src/calculus/: CalculosInstagram.ts  CalculosReddit.ts  CalculosX.ts  ConsolidacionDatos.ts  DatosPrueba.ts  DescargaDatos.ts  PruebaCompleta.ts
core/web/src/components/: AcceptButton.tsx  BackButton.tsx  BlueButton.tsx  BotonVolver.tsx  ButtonAdd.tsx  CardHeader.tsx  Container.tsx  CorrelacionVentas.tsx  CorrelationChart.tsx  CorrelationInsights.tsx  DynamicTitle.tsx  EnclosedWord.tsx  EstadoConexion.tsx  GenericButton.tsx  HashtagCard.tsx  InterpretacionDashboard.tsx  Loading.css  LoadingSpinner.tsx  LogOut.tsx  LogoBackground.tsx  MenuComponentes.tsx  Navbar.tsx  PlotTrend.tsx  ProgressBar.tsx  Protected.tsx  RatePlot.tsx  ScrollToTop.tsx  SeccionHashtags.tsx  SeccionNoticias.tsx  SeccionVentas.tsx  SelectField.tsx  SideBar.tsx  TagInput.tsx  (+16 more)
core/zbrowser/: Cargo.toml
core/zbrowser/.cargo/: config.toml
core/zbrowser/common/: Cargo.toml  build.rs  common.h
core/zbrowser/zbrowser-core/: Cargo.toml  build.rs
core/zbrowser/zbrowser-utils/: Cargo.toml
diagrams/: database.drawio
documents/: database.drawio
runner/: Dockerfile  config-runner.sh  create-runner.sh  delete-runner.sh  runner-controller.yaml  runner.yaml
tunnel/: README.md  bun.lockb  index.ts  package.json
(+131 files in other folders)
