[tool.poetry]
name = "models"
version = "0.1.0"
description = "Models for the project"
authors = []
packages = [{include = "models", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
pytest = ">=8.3.5"

[tool.poetry.scripts]
models = "models.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"