[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev"]   # Esto activa `dev` cuando haces `cargo run` sin argumentos
dev = []
dev_ssl = []
prod = []

[dependencies]
diesel = { version = "2.2.9", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
once_cell = "1.21.3"


actix-web = "4"
serde = { version = "1.0.219", features = ["derive"]}

lazy_static = "1.5.0"
anyhow = "1.0.97"

log = "0.4.27"
env_logger = "0.11.8"

jsonwebtoken = "9.3.1"
argon2 = "0.4"
password-hash = "0.4"
rand = "0.8"
chrono = "0.4.40"
actix-cors = "0.7.1"
validator = {version = "0.20.0", features = ["derive"]}
