[workspace]
resolver = "3"
default-members = ["app"]
members = ["app", "auth", "macros"]

[workspace.dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
env_logger = "0.11.8"
derive_builder = "0.20.2"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
macros = { path = "macros" }
