[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
actix-rt = "2.8"
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono", "uuid", "numeric"] }
diesel_migrations = "2.2.0"
validator = { version = "0.20.0", features = ["derive"] }
scraper = "0.23.1"
regex = "1.11.1"
rig-core = "0.12.0"
reqwest = {version = "0.12.15", features = ["json"]}
url = "2.5.4"
futures = "0.3.31"
fake = "4.3.0"
rand = "0.9.1"
actix-files = "0.6.6"
futures-util = "0.3"

aws-config = "1.1"
aws-sdk-dynamodb = "1.15"
aws-sdk-sts = "1.15"
uuid = { version = "1.0", features = ["v4"] }

macros = { workspace = true }
auth = { workspace = true }
zbrowser = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
env_logger = { workspace = true }
derive_builder = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
